# keke-pet

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  可可桌宠_PRD_v1.0.md
.github/workflows/: build.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: behavior_fsm.rs  commands.rs  db.rs  lib.rs  main.rs  mood.rs
src-tauri/src/ai/: mod.rs  rule_engine.rs
src/engine/: inputHandler.ts  renderer.ts
src/stores/: kekeStore.ts
