[package]
name = "keke-pet"
version = "0.1.0"
edition = "2021"
description = "可可桌宠 - Keke Desktop Pet"
authors = ["Keke Pet Team"]

[lib]
name = "keke_pet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
image = "0.24"
base64 = "0.22"
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
